# snake-game

./: .gitignore  CMakeLists.txt  CMakePresets.json
Header/: food.h  game.h  globals.h  snake.h
src/: food.cpp  food.h  game.cpp  game.h  globals.cpp  main.cpp  snake.cpp  snake.h
